testdata/golden/sema/invalid/compare_arm_block_missing_return.sg
// scenario: compare arm block used as value but falling through without return
fn source(flag: bool) -> Erring<string, Error> {
    if flag {
        return Success("hello");
    }
    return Error { message = "missing", code = 1:uint };
}

fn recover(flag: bool) -> Erring<string, Error> {
    let res = source(flag);
    return compare res {
        Success(text) => Success(text);
        err => {
            if err.code == 1:uint {
                let empty: string = "";
                Success(empty);
            } else {
                err;
            }
        }
    };
}
